--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     padding: 10px;
     justify-content: center;
     align-items: center;
